--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,11 @@
 [submodule "external/unbound"]
 	path = external/unbound
 	url = https://github.com/monero-project/unbound
-	branch = monero
+	branch = triton
 [submodule "external/miniupnp"]
 	path = external/miniupnp
 	url = https://github.com/monero-project/miniupnp
 	branch = monero
+[submodule "external/rapidjson"]
+	path = external/rapidjson
+	url = https://github.com/Tencent/rapidjson
