--- a/src/wallet/CMakeLists.txt
+++ b/src/wallet/CMakeLists.txt
@@ -100,7 +100,7 @@ target_link_libraries(wallet_rpc_server
     ${EXTRA_LIBRARIES})
 set_property(TARGET wallet_rpc_server
   PROPERTY
-    OUTPUT_NAME "Triton-wallet-rpc")
+    OUTPUT_NAME "monero-wallet-rpc")
 install(TARGETS wallet_rpc_server DESTINATION bin)
 
 
